--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@capacitor/app": "7.0.0",
     "@capacitor/browser": "^7.0.0",
     "@capacitor/core": "7.0.1",
+    "@capacitor/geolocation": "^7.1.1",
+    "@capacitor/google-maps": "^7.0.1",
     "@capacitor/haptics": "7.0.0",
     "@capacitor/ios": "7.0.1",
     "@capacitor/keyboard": "7.0.0",
@@ -47,6 +49,8 @@
     "@angular/language-service": "^19.0.0",
     "@capacitor/cli": "7.0.1",
     "@ionic/angular-toolkit": "^12.0.0",
+    "@types/google.maps": "^3.58.1",
+    "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
     "@typescript-eslint/parser": "^8.18.0",
