--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "@capacitor/haptics": "7.0.0",
     "@capacitor/ios": "7.0.1",
     "@capacitor/keyboard": "7.0.0",
+    "@capacitor/share": "^7.0.1",
     "@capacitor/status-bar": "7.0.0",
     "@ionic/angular": "^8.0.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
+    "swiper": "^11.2.6",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -52,6 +54,8 @@
     "@types/google.maps": "^3.58.1",
     "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "~5.1.0",
+    "@types/jest": "^29.5.14",
+    "@types/mocha": "^10.0.10",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
     "@typescript-eslint/parser": "^8.18.0",
     "eslint": "^9.16.0",
