--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@capacitor/status-bar": "7.0.0",
     "@ionic/angular": "^8.0.0",
     "ionicons": "^7.0.0",
+    "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
     "swiper": "^11.2.6",
     "tslib": "^2.3.0",
@@ -55,6 +56,7 @@
     "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "~5.1.0",
     "@types/jest": "^29.5.14",
+    "@types/leaflet": "^1.9.17",
     "@types/mocha": "^10.0.10",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
     "@typescript-eslint/parser": "^8.18.0",
