--- a/package.json
+++ b/package.json
@@ -25,13 +25,18 @@
     "@capacitor/app": "7.0.0",
     "@capacitor/browser": "^7.0.0",
     "@capacitor/core": "7.0.1",
+    "@capacitor/geolocation": "^7.1.1",
+    "@capacitor/google-maps": "^7.0.1",
     "@capacitor/haptics": "7.0.0",
     "@capacitor/ios": "7.0.1",
     "@capacitor/keyboard": "7.0.0",
+    "@capacitor/share": "^7.0.1",
     "@capacitor/status-bar": "7.0.0",
     "@ionic/angular": "^8.0.0",
     "ionicons": "^7.0.0",
+    "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
+    "swiper": "^11.2.6",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -47,7 +52,12 @@
     "@angular/language-service": "^19.0.0",
     "@capacitor/cli": "7.0.1",
     "@ionic/angular-toolkit": "^12.0.0",
+    "@types/google.maps": "^3.58.1",
+    "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "~5.1.0",
+    "@types/jest": "^29.5.14",
+    "@types/leaflet": "^1.9.17",
+    "@types/mocha": "^10.0.10",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
     "@typescript-eslint/parser": "^8.18.0",
     "eslint": "^9.16.0",
