--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@capacitor/android": "7.0.1",
     "@capacitor/app": "7.0.0",
     "@capacitor/browser": "^7.0.0",
-    "@capacitor/core": "7.0.1",
+    "@capacitor/core": "^7.0.1",
     "@capacitor/geolocation": "^7.1.1",
     "@capacitor/google-maps": "^7.0.1",
     "@capacitor/haptics": "7.0.0",
@@ -50,7 +50,7 @@
     "@angular/cli": "^19.0.0",
     "@angular/compiler-cli": "^19.0.0",
     "@angular/language-service": "^19.0.0",
-    "@capacitor/cli": "7.0.1",
+    "@capacitor/cli": "^7.2.0",
     "@ionic/angular-toolkit": "^12.0.0",
     "@types/google.maps": "^3.58.1",
     "@types/googlemaps": "^3.43.3",
