--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -17,6 +17,7 @@ dependencies {
     implementation project(':capacitor-keyboard')
     implementation project(':capacitor-share')
     implementation project(':capacitor-status-bar')
+    implementation project(':codetrix-studio-capacitor-google-auth')
 
 }
 
