--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@capacitor/keyboard": "7.0.0",
     "@capacitor/share": "^7.0.1",
     "@capacitor/status-bar": "7.0.0",
+    "@codetrix-studio/capacitor-google-auth": "^3.4.0-rc.4",
     "@ionic/angular": "^8.0.0",
     "ionicons": "^7.0.0",
     "leaflet": "^1.9.4",
