--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
-    "@capacitor/android": "7.2.0",
+    "@capacitor/android": "^6.2.1",
     "@capacitor/app": "7.0.0",
     "@capacitor/browser": "^7.0.1",
-    "@capacitor/core": "^7.0.1",
+    "@capacitor/core": "^6.2.1",
     "@capacitor/geolocation": "^7.1.2",
     "@capacitor/google-maps": "^7.0.1",
     "@capacitor/haptics": "7.0.0",
-    "@capacitor/ios": "7.2.0",
+    "@capacitor/ios": "^6.2.1",
     "@capacitor/keyboard": "7.0.0",
     "@capacitor/share": "^7.0.1",
     "@capacitor/status-bar": "7.0.0",
