--- a/package.json
+++ b/package.json
@@ -21,18 +21,19 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
-    "@capacitor/android": "^6.2.1",
-    "@capacitor/app": "7.0.0",
-    "@capacitor/browser": "^7.0.1",
+    "@capacitor/android": "6.2.1",
+    "@capacitor/app": "^4.1.1",
+    "@capacitor/browser": "^4.1.1",
     "@capacitor/cli": "^6.2.1",
     "@capacitor/core": "^6.2.1",
     "@capacitor/geolocation": "^7.1.2",
     "@capacitor/google-maps": "^7.0.1",
     "@capacitor/haptics": "7.0.0",
     "@capacitor/ios": "^6.2.1",
-    "@capacitor/keyboard": "7.0.0",
+    "@capacitor/keyboard": "^4.1.1",
     "@capacitor/share": "^7.0.1",
-    "@capacitor/status-bar": "7.0.0",
+    "@capacitor/status-bar": "^4.1.1",
+    "@codetrix-studio/capacitor-google-auth": "^3.4.0-rc.4",
     "@ionic/angular": "^8.0.0",
     "ionicons": "^7.0.0",
     "leaflet": "^1.9.4",
