--- a/package.json
+++ b/package.json
@@ -21,19 +21,17 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
-    "@capacitor/android": "^6.2.1",
-    "@capacitor/app": "^6.0.0",
-    "@capacitor/browser": "^6.0.0",
-    "@capacitor/cli": "^6.2.1",
-    "@capacitor/core": "^6.2.1",
-    "@capacitor/geolocation": "^7.1.2",
+    "@capacitor/android": "7.0.1",
+    "@capacitor/app": "7.0.0",
+    "@capacitor/browser": "^7.0.0",
+    "@capacitor/core": "7.0.1",
+    "@capacitor/geolocation": "^7.1.1",
     "@capacitor/google-maps": "^7.0.1",
     "@capacitor/haptics": "7.0.0",
-    "@capacitor/ios": "^6.2.1",
-    "@capacitor/keyboard": "^4.1.1",
+    "@capacitor/ios": "7.0.1",
+    "@capacitor/keyboard": "7.0.0",
     "@capacitor/share": "^7.0.1",
-    "@capacitor/status-bar": "^4.1.1",
-    "@codetrix-studio/capacitor-google-auth": "^3.4.0-rc.4",
+    "@capacitor/status-bar": "7.0.0",
     "@ionic/angular": "^8.0.0",
     "ionicons": "^7.0.0",
     "leaflet": "^1.9.4",
@@ -52,6 +50,7 @@
     "@angular/cli": "^19.0.0",
     "@angular/compiler-cli": "^19.0.0",
     "@angular/language-service": "^19.0.0",
+    "@capacitor/cli": "7.0.1",
     "@ionic/angular-toolkit": "^12.0.0",
     "@types/google.maps": "^3.58.1",
     "@types/googlemaps": "^3.43.3",
