--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -20,6 +20,10 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="karabs" android:host="auth" android:path="/callback" />
             </intent-filter>
 
         </activity>
@@ -33,6 +37,9 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths"></meta-data>
         </provider>
+
+      <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyAW5_fqzhBzXO1pNDjxg4H02SNCVIQ4ej8"/>
+
     </application>
 
     <!-- Permissions -->
